--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "exa-js": "^1.10.2",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "groq-sdk": "^0.33.0",
